syntax = "proto3";

option go_package = "github.com/MichaelDarr/stack/auth/proto";

package auth;

// Interface exported by the server.
service Auth {
  rpc GetJWKS(GetJWKSRequest) returns (GetJWKSResponse) {}
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message GetJWKSRequest {}

message GetJWKSResponse {
  string jwks = 1;
}

message GetTokenRequest {
  string id = 1;
}

message GetTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
}
